--- a/fancy-weather/src/css/components/weather-info/_weather-info.scss
+++ b/fancy-weather/src/css/components/weather-info/_weather-info.scss
@@ -89,6 +89,11 @@
 }
 
 @media (max-width: 499px) {
+  .weather-info-today {
+    .info__temperature {
+      font-size: 5rem;
+    }
+  }
   .weather-info-three-days {
     .info-wrapper {
       @include flex(column, center, center);
