--- a/fancy-weather/src/css/layout/_main-content.scss
+++ b/fancy-weather/src/css/layout/_main-content.scss
@@ -20,7 +20,7 @@
     flex-direction: column;
 
     .weather-info {
-      width: 90%;
+      width: 100%;
     } 
     .location-info {
       width: 70%;
